--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -79,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=COMP603_Assignment2
-main.class=comp603_assignment2.COMP603_Assignment2
+main.class=model.Quiz
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
